--- a/cards/templates/index.html
+++ b/cards/templates/index.html
@@ -4,33 +4,27 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags always come first -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>NEIGHBOURHOOD</title>
+    <title>Flash</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Major+Mono+Display" rel="stylesheet">
 
-    <!-- Bootstrap core CSS -->
-    <!-- <link href="../../css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Material Design Bootstrap -->
-    <!-- <link href="../../css/mdb.min.css" rel="stylesheet">  -->
+    
 
 </head>
 
 <body>
         <!-- /.Navbar -->
     </header>
-    <!--/.Double navigation-->
     
     <!--Main layout-->
     <main>
             <div class="animated  flash">
-                    <h1 style="text-align:center;font-family: 'Major Mono Display', monospace;"><a href="{% url 'myneighbourhood' %}" style="color:white">NEIGHBOURS</a></h1>
+                    <h1 style="text-align:center;font-family: 'Major Mono Display', monospace;"><a href="{% url 'welcome' %}" style="color:white">FLASHCARDS</a></h1>
             </div>
         <div class="container-fluid text-center">
 
@@ -39,8 +33,19 @@
 
                 <!--Card image-->
                 <div class="view view-cascade overlay wow fadeIn">
-                    <img src="https://images.unsplash.com/photo-1453785675141-67637e2d4b5c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" class="img-fluid" width="100%" height="10%">
-                    <a href="#!">
+                        <section id="me" class="jumbotron text-center" style="color:black">
+                                <div class="container" style="color:black">
+                                  <h1 class="jumbotron-heading">This Is</h1>
+                                  <p class="lead" style="font-size:2em;color:black">FLASH-CARD APP</p>
+                                  <hr>
+                                  <hr>
+                                  
+                                </div>
+                                  <h2 id="mainText" class="center" style="color:whitesmoke">WE ARE READY TO HOST YOU</h2>
+                                  
+                              </div>
+                              </div>
+                              </section>                    <a href="{% url 'welcome'%}">
                         <div class="mask rgba-white-slight"></div>
                     </a>
                 </div>
@@ -50,7 +55,7 @@
         
                 <div class="card-body card-body-cascade text-center wow fadeIn" data-wow-delay="0.2s" style="background-color:skyblue">
                     <!--Title-->
-                    <h4 class="card-title" style="color:black"><strong>Shortcuts</strong></h4>
+                    <h4 class="card-title" style="color:black"><strong>FLASH-CARD COURSES</strong></h4>
                     
 
                         
@@ -76,24 +81,31 @@
 
                 <!--First column-->
                 <div class="col-md-3">
-                    <h5 class="text-uppercase font-weight-bold mb-4">More Info</h5>
-                    <p>Here are More info and links.</p>
+                    <h5 class="text-uppercase font-weight-bold mb-4">Explore Today</h5>
+                    <p>The following are our categories.</p>
                 </div>
                 <!--/.First column-->
 
                 <div class="col-md-2 mx-auto">
-                    <h5 class="text-uppercase font-weight-bold mb-4">Add Hoods</h5>
+                    <h5 class="text-uppercase font-weight-bold mb-4">JavaScript</h5>
                     <ul class="list-unstyled">
                         
                     </ul>
                 </div>
+
+                <div class="col-md-2 mx-auto">
+                        <h5 class="text-uppercase font-weight-bold mb-4">Angular Js</h5>
+                        <ul class="list-unstyled">
+                            
+                        </ul>
+                    </div>
                 <!--/.Second column-->
 
                 <hr class="w-100 clearfix d-md-none">
 
                 <!--Third column-->
                 <div class="col-md-2 mx-auto">
-                    <h5 class="text-uppercase font-weight-bold mb-4">Neighbourhoods</h5>
+                    <h5 class="text-uppercase font-weight-bold mb-4">Python Flask</h5>
                     <ul class="list-unstyled">
                         
                     </ul>
@@ -104,7 +116,7 @@
 
                 <!--Fourth column-->
                 <div class="col-md-2 mx-auto">
-                    <h5 class="text-uppercase font-weight-bold mb-4" style="color:white">Profile</h5>
+                    <h5 class="text-uppercase font-weight-bold mb-4" style="color:white">Django</h5>
                     <ul class="list-unstyled">
 
                     </ul>
@@ -117,36 +129,13 @@
 
         <hr>
 
-        <!--Call to action-->
-        <div class="call-to-action text-center my-4">
-            <ul class="list-unstyled list-inline">
-                <li class="list-inline-item">
-                    <h5 style="color:white">Register for free</h5>
-                </li>
-                <li class="list-inline-item"><a href="/accounts/register/" class="btn btn-primary">Sign up!</a></li>
-            </ul>
-        </div>
-        <!--/.Call to action-->
-
-        <hr>
-
-        <!--Social buttons-->
-        <div class="social-section text-center">
-            <ul class="list-unstyled list-inline">
-                <li class="list-inline-item"><a href="https://facebook.com/Francis Sakwa" class="btn-floating btn-fb" style="color:white"><i class="fab fa-facebook-f"> </i></a></li>
-                <li class="list-inline-item"><a href="https://twitter.com/Francis Sakwa" class="btn-floating btn-tw" style="color:white"><i class="fab fa-twitter"> </i></a></li>
-                <li class="list-inline-item"><a href="https://google.com" class="btn-floating btn-gplus" style="color:white"><i class="fab fa-google-plus-g"> </i></a></li>
-                <li class="list-inline-item"><a href="https://ke.linkedin.com/" class="btn-floating btn-li" style="color:white"><i class="fab fa-linkedin-in"> </i></a></li>
-                <li class="list-inline-item"><a href="https://github.com/FrancisSakwa89" class="btn-floating btn-git" style="color:white"><i class="fab fa-github"> </i></a></li>
-            </ul>
-        </div>
         
-        <!--/.Social buttons-->
 
-        <!--Copyright-->
+
+        
         <div class="footer-copyright py-3 text-center">
             <div class="container-fluid">
-                © 2018 Copyright: <a href="http://github.com/FrancisSakwa89" style="color:white"> Francis Sakwa </a>
+                © 2018 Copyright: <a href='/' style="color:white"> FLASHCARDS </a>
 
             </div>
         </div>
@@ -177,6 +166,21 @@
     </script>
 
 
+
+<style>
+#me{
+  background-image: url("https://res.cloudinary.com/rpafurongcloud/image/upload/v1496706843/home3_de7hny.png");
+  background-repeat: no-repeat;
+  background-position: center bottom;
+}
+
+#me p{
+  color: #fff ;
+}
+
+
+
+</style>
 </body>
 
 </html>
