--- a/cards/templates/index.html
+++ b/cards/templates/index.html
@@ -89,8 +89,8 @@
                 <div class="col-md-2 mx-auto">
                     <h5 class="text-uppercase font-weight-bold mb-4">JavaScript</h5>
                     <ul class="list-unstyled">
-                        
-                    </ul>
+                                    <li><a  href="{% url 'card' %}" style="color:green">Cards</a></li>
+                        </ul>
                 </div>
 
                 <div class="col-md-2 mx-auto">
