--- a/cards/templates/card.html
+++ b/cards/templates/card.html
@@ -15,7 +15,7 @@
       <div class="card-body">    
         <h5 class="card-header">{{card.title}}</h5>
         <h5 class="card-text firstletter">{{ card.notes| truncatechars:450 }}</h5>
-        <p>Date created: {{card.pub_date}} </p>
+        <p class="text-success">Date created: {{card.pub_date}} </p>
         <p style="font-style:italic;text-decoration:underline">carded by: {{card.user}}</p>
 
     </div>
@@ -24,11 +24,12 @@
   <br>
 
 {% endfor %}
+
+<h4 style="text-align:center">Add More cards <a href="{% url 'newcard' %}">here</a>.</h4>
 {%else%}
 <h4 style="text-align:center">Add cards <a href="{% url 'newcard' %}">here</a>.</h4>
 {% endif %}
 </div>
-<h4 style="text-align:center">Add More cards <a href="{% url 'newcard' %}">here</a>.</h4>
 
 <br>
   <br>
