--- a/cards/templates/registration/registration_form.html
+++ b/cards/templates/registration/registration_form.html
@@ -1,34 +1,45 @@
-<<<<<<< HEAD
-{% extends 'registration/base.html'%}
-{% load bootstrap4%}
-{%block content%}
+{%extends "registration/base.html"%} {% load bootstrap4 %} {% block content %}
 <div class="container">
+  <style>
+                .container{
+                    background: linear-gradient(to right, #16222a, #3a6073);
+                    background-size: cover;
+                }
+        </style>
   <div class="row">
+    <!-- Empty div -->
     <div class="col-md-4"></div>
-    <div class="col-md-4 pt-5">
-      <div class="card">
-        <div class="card-header">
-          <h2 class="text-center">Sign up</h2>
-        </div>
-        <div class="card-body">
-          <form action="" method="POST">
-            {% bootstrap_form form%}
-            {% csrf_token %}
-          </form>
-        </div>
-        <div class="card-footer">
-          <p class="pr d-inline"><input type="submit" name="" value="Sign up" class="btn btn-outline-primary  " id=""></p>
-          <input type="hidden" name='next' value='/'>
-          <p class="d-inline pl-5"> <a href="/">Login Here.</a></p>          
-        </div>
-        
-      </div>
-      
-    </div>
     <div class="col-md-4">
-      
+      {% if form.errors %}
+      <p> Some Information Might be Incorrect </p>
+      {% endif %}
+
+      <div class="panel panel-default" style="background: linear-gradient(to right, #141e30, #243b55); color: white;">
+
+        <div class="panel-heading" >
+          <h3 class="text-center">Sign Up</h3>
+        </div>
+        <div class="panel-body"  style="color: whitesmoke">
+
+          <form action="/accounts/register/" method="post">
+            {% csrf_token %} {% bootstrap_form form %}
+            <div class="form-group">
+              <input type="submit" class="btn btn-primary btn-sm" value="Sign Up">
+              <p>Have an account ? <a href="/accounts/login/">Login</a></p>
+            </div>
+
+            <input type="hidden" name="next" value="{{next}}">
+
+          </form>
+
+        </div>
+
+      </div>
+
     </div>
+    <!-- empty div -->
+    <div class="col-md-4"></div>
   </div>
 </div>
-{%endblock%}
 
+{% endblock %}
